# teamdiff_back

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  _ide_helper.php  compose.yaml  composer.json  package-lock.json  package.json
.github/workflows/: docker-image.yml
app/Casts/: WeakEnum.php
app/Enums/: RegionEnum.php  RoleEnum.php  TeamEnum.php
app/Models/: Account.php  Game.php  LoLMatch.php  Participant.php  Participation.php  Player.php  Review.php  Summoner.php  User.php
app/Providers/: AppServiceProvider.php  RiotExtendSocialite.php  RiotProvider.php
app/Traits/: EnumEnhancements.php
bootstrap/: app.php
config/: app.php  auth.php  cors.php  graphiql.php  graphql.php  mail.php  riot.php  scout.php  services.php
database/factories/: AccountFactory.php  GameFactory.php  LoLMatchFactory.php  ParticipantFactory.php  ParticipationFactory.php  PlayerFactory.php  ReviewFactory.php  SummonerFactory.php  UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_04_11_224144_create_accounts_table.php  2025_04_11_224416_create_summoners_table.php  2025_04_12_103643_create_matches_and_participants_tables.php  2025_04_12_103643_create_matches_and_participations_tables.php  2025_04_13_100715_create_reviews_table.php  2025_04_20_154045_alter_table_accounts.php  2025_04_21_215638_alter_table_accounts.php  2025_04_22_184201_alter_reviews_table.php  2025_05_01_095335_create_lol_tables.php
docker/: docker-entrypoint.sh
routes/: api.php  web.php
src/: dto.rs  graphql.rs  main.rs  models.rs  schema.rs
(+53 files in other folders)
