[package]
name = "teamdiff_back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.7"
juniper = "0.16.1"
juniper_actix = "0.6.0"
